set c# language preview on all projects

--- a/Src/Dnn/ToSic.Sxc.Dnn.Razor/ToSic.Sxc.Dnn.Razor.csproj
+++ b/Src/Dnn/ToSic.Sxc.Dnn.Razor/ToSic.Sxc.Dnn.Razor.csproj
@@ -109,7 +109,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <NoWarn>$(NoWarn);MSB3277</NoWarn>
-    <LangVersion>default</LangVersion>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DotNetNuke.Core" Version="9.6.1">
