--- a/Src/Oqtane/ToSic.Sxc.Oqt.Server/ToSic.Sxc.Oqt.Server.csproj
+++ b/Src/Oqtane/ToSic.Sxc.Oqt.Server/ToSic.Sxc.Oqt.Server.csproj
@@ -96,6 +96,7 @@
     <EmbeddedResource Include="Scripts\ToSic.Sxc.16.07.01.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.18.03.00.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.19.00.00.sql" />
+    <EmbeddedResource Include="Scripts\ToSic.Sxc.19.99.00.sql" />
     <EmbeddedResource Include="Scripts\ToSic.Sxc.Uninstall.sql" />
   </ItemGroup>
 
