--- a/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
+++ b/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
@@ -40,7 +40,7 @@
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Apps\ToSic.Eav.Apps.csproj" />
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Core\ToSic.Eav.Core.csproj" />
     <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.WebApi\ToSic.Eav.WebApi.csproj" />
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Lib.Core\ToSic.Lib.Core.csproj" />
+    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Sys.Core\ToSic.Lib.Core.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Code.Generate\ToSic.Sxc.Code.Generate.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
