--- a/Src/Dnn/ToSic.Sxc.Dnn.Core/ToSic.Sxc.Dnn.Core.csproj
+++ b/Src/Dnn/ToSic.Sxc.Dnn.Core/ToSic.Sxc.Dnn.Core.csproj
@@ -149,7 +149,7 @@
       <Project>{f93f5fb1-95a6-4c4b-bdcf-b001e82f766f}</Project>
       <Name>ToSic.Eav.WebApi</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Lib.Core\ToSic.Lib.Core.csproj">
+    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Sys.Core\ToSic.Sys.Core.csproj">
       <Project>{bc93efb1-d740-4617-9c90-d9167f9e4545}</Project>
       <Name>ToSic.Lib.Core</Name>
     </ProjectReference>
