reworking DataFactory to use Generator WIP...

--- a/Src/Dnn.Tests/ToSic.Sxc.Dnn.SystemTests/ToSic.Sxc.Dnn.SystemTests.csproj
+++ b/Src/Dnn.Tests/ToSic.Sxc.Dnn.SystemTests/ToSic.Sxc.Dnn.SystemTests.csproj
@@ -6,7 +6,7 @@
     <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
-    <RootNamespace>ToSic.Sxc</RootNamespace>
+    <RootNamespace>ToSic.Sxc.Dnn</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
