--- a/Src/Sxc.Tests/ToSic.Sxc.WebApi.Tests/ToSic.Sxc.WebApi.Tests.csproj
+++ b/Src/Sxc.Tests/ToSic.Sxc.WebApi.Tests/ToSic.Sxc.WebApi.Tests.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\Sxc\ToSic.Sxc\Properties\AssemblyInfoInherited.cs" Link="Properties\AssemblyInfoInherited.cs" />
+    <Compile Include="..\..\Sxc\ToSic.Sxc\Properties\SxcSharedAssemblyInfo.cs" Link="Properties\SxcSharedAssemblyInfo.cs" />
   </ItemGroup>
 
 </Project>
