--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -80,4 +80,9 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Custom.Data\" />
+    <Folder Include="Custom.Hybrid\" />
+  </ItemGroup>
+
 </Project>
