--- a/Src/Sxc/ToSic.Sxc.Code.Generate/ToSic.Sxc.Code.Generate.csproj
+++ b/Src/Sxc/ToSic.Sxc.Code.Generate/ToSic.Sxc.Code.Generate.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToSic.Sxc.Custom\ToSic.Sxc.Custom.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
