--- a/Src/Sxc/ToSic.Sxc.Custom/ToSic.Sxc.Custom.csproj
+++ b/Src/Sxc/ToSic.Sxc.Custom/ToSic.Sxc.Custom.csproj
@@ -42,9 +42,9 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
     <!--<Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Net.Http.WebRequest" />-->
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Http">
+    <!--<Reference Include="System.Web.Http">
       <HintPath>..\..\..\Dependencies\System.Web\System.Web.Http.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
