--- a/Src/ToSic.Sxc.UnitTests/ToSic.Sxc.UnitTests.csproj
+++ b/Src/ToSic.Sxc.UnitTests/ToSic.Sxc.UnitTests.csproj
@@ -33,6 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sxc\ToSic.Sxc.Code\ToSic.Sxc.Code.csproj" />
+    <ProjectReference Include="..\Sxc\ToSic.Sxc.Custom\ToSic.Sxc.Custom.csproj" />
     <ProjectReference Include="..\Sxc\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
