--- a/Src/Sxc/ToSic.Sxc.Custom/ToSic.Sxc.Custom.csproj
+++ b/Src/Sxc/ToSic.Sxc.Custom/ToSic.Sxc.Custom.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToSic.Sxc.Code.HotBuild\ToSic.Sxc.Code.HotBuild.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Code\ToSic.Sxc.Code.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
