--- a/Src/Sxc/ToSic.Sxc.Code.HotBuild/ToSic.Sxc.Code.HotBuild.csproj
+++ b/Src/Sxc/ToSic.Sxc.Code.HotBuild/ToSic.Sxc.Code.HotBuild.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+
   <PropertyGroup>
     <TargetFrameworks>net472;net9.0;</TargetFrameworks>
-    <RootNamespace>ToSic.Sxc</RootNamespace>
-    <AssemblyName>ToSic.Sxc.Code</AssemblyName>
+    <RootNamespace>ToSic.Sxc.Code</RootNamespace>
+    <AssemblyName>ToSic.Sxc.Code.HotBuild</AssemblyName>
     <Deterministic>true</Deterministic>
     <!--<FileAlignment>512</FileAlignment>-->
     <NoWarn>7035;CS1591</NoWarn>
@@ -42,15 +43,15 @@
     <!--<Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />-->
-    <Reference Include="System.Web" />
+    <!--<Reference Include="System.Web" />-->
     <!--<Reference Include="System.Web.Http">
       <HintPath>..\..\..\Dependencies\System.Web\System.Web.Http.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
     </Reference>-->
-    <Reference Include="ToSic.Razor">
+    <!--<Reference Include="ToSic.Razor">
       <HintPath>..\..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
-    </Reference>
+    </Reference>-->
     <!--<Reference Include="Microsoft.CSharp" />-->
   </ItemGroup>
 
@@ -62,13 +63,8 @@
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />-->
 
-    <Reference Include="ToSic.Razor">
+    <!--<Reference Include="ToSic.Razor">
       <HintPath>..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
-    </Reference>
+    </Reference>-->
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Code\HotBuild.Internal\" />
-  </ItemGroup>
-
 </Project>
