--- a/Src/ToSic.Sxc.UnitTests/ToSic.Sxc.UnitTests.csproj
+++ b/Src/ToSic.Sxc.UnitTests/ToSic.Sxc.UnitTests.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Sxc\ToSic.Sxc.Code\ToSic.Sxc.Code.csproj" />
     <ProjectReference Include="..\Sxc\ToSic.Sxc.Custom\ToSic.Sxc.Custom.csproj" />
+    <ProjectReference Include="..\Sxc\ToSic.Sxc.Services\ToSic.Sxc.Services.csproj" />
     <ProjectReference Include="..\Sxc\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
